@@ -5,6 +5,7 @@ New features:
 
 
 Bugs fixed:
+- 1923373 Fixed SFCB GetClass defaults optional IncludeQualifiers=false
 - 1928541 Fixed sfcb binary interface memory leak on CMGetObjectPath
 -1946202 getPropQualifier function attempts to free non-malloced mem
 -1928541 sfcb binary interface memory leak on CMGetObjectPath
